--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "huszti.martin.deadline"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -43,6 +43,10 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:$room_version"
 
     implementation ('com.marshalchen.ultimaterecyclerview:library:0.7.3')
+
+    implementation 'com.github.badoualy:datepicker-timeline:c6dcd05737'
+
+    implementation 'com.github.shrikanth7698:Collapsible-Calendar-View-Android:v1.0.0'
 
 
 }
