--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,9 @@ dependencies {
 
     implementation 'com.github.shrikanth7698:Collapsible-Calendar-View-Android:v1.0.0'
 
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    implementation 'com.github.zagum:Android-SwitchIcon:1.3.8'
+
 
 }
