--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
 
     implementation 'com.github.zagum:Android-SwitchIcon:1.3.8'
 
+    implementation 'com.ms-square:expandableTextView:0.1.4'
+
 
 }
